--- a/__1_The JavaScript language/__11_Promises_async_await/__8_Async_await/index.html
+++ b/__1_The JavaScript language/__11_Promises_async_await/__8_Async_await/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-  <script type="module" src="main.js"></script>
+  <!-- <script type="module" src="main.js"></script> -->
+  <script type="module" src="script2.js"></script>
 </body>
 
 </html>
