--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
@@ -13,6 +13,7 @@
       const lastChild = document.body.lastChild;
 
       console.log(children[0] === firstChild);
+      alert(lastChild === children[children.length - 1]);
     </script>
   </body>
 </html>
