--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
@@ -14,6 +14,8 @@
 
       console.log(children[0] === firstChild);
       alert(lastChild === children[children.length - 1]);
+
+      alert(document.body.hasChildNodes());
     </script>
   </body>
 </html>
