--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
@@ -16,6 +16,10 @@
       alert(lastChild === children[children.length - 1]);
 
       alert(document.body.hasChildNodes());
+
+      for (const node of document.body.childNodes) {
+        alert(node);
+      }
     </script>
   </body>
 </html>
