--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
@@ -20,6 +20,7 @@
       for (const node of document.body.childNodes) {
         alert(node);
       }
+      alert(document.body.childNodes.filter);
     </script>
   </body>
 </html>
