--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
@@ -21,6 +21,7 @@
         alert(node);
       }
       alert(document.body.childNodes.filter);
+      alert(Array.from(document.body.childNodes).filter);
     </script>
   </body>
 </html>
