--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index4.html
@@ -20,6 +20,10 @@
       for (const node of document.body.childNodes) {
         alert(node);
       }
+
+      for (const prop in document.body.childNodes) {
+        alert(prop);
+      }
       alert(document.body.childNodes.filter);
       alert(Array.from(document.body.childNodes).filter);
     </script>
