--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index5.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index5.html
@@ -2,6 +2,10 @@
 <html>
   <head></head>
   <body>
-    <script></script>
+    <script>
+      const html = document.documentElement;
+      const parentOfBody = document.body.parentNode;
+      alert(html === parentOfBody);
+    </script>
   </body>
 </html>
