--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index5.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index5.html
@@ -6,6 +6,9 @@
       const html = document.documentElement;
       const parentOfBody = document.body.parentNode;
       alert(html === parentOfBody);
+      const head = document.head;
+      const body = head.nextSibling.nextSibling;
+      alert(body);
     </script>
   </body>
 </html>
