--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index5.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index5.html
@@ -9,6 +9,7 @@
       const head = document.head;
       const body = head.nextSibling.nextSibling;
       alert(body);
+      alert(body.previousSibling.previousSibling);
     </script>
   </body>
 </html>
