--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index8.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index8.html
@@ -13,6 +13,10 @@
       for (let i = 0; i < document.body.children.length - 1; i++) {
         alert(document.body.children[i]);
       }
+
+      for (let elem of document.body.children) {
+        console.log(elem);
+      }
     </script>
     ...
   </body>
