--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index8.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index8.html
@@ -10,7 +10,7 @@
     <div>End</div>
 
     <script>
-      for (let i = 0; i < document.body.children.length - 1; i++) {
+      for (let i = 0; i < document.body.children.length; i++) {
         alert(document.body.children[i]);
       }
 
