--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script>
+      alert("From HEAD: " + document.body);
+    </script>
+  </head>
   <body>
+    <script>
+      alert("From BODY: " + document.body);
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
