--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -6,6 +6,13 @@
     </script>
   </head>
   <body>
+    <div>Begin</div>
+
+    <ul>
+      <li>
+        <b>Information</b>
+      </li>
+    </ul>
     <script>
       alert("From BODY: " + document.body);
     </script>
