--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -17,5 +17,6 @@
       alert("From BODY: " + document.body);
     </script>
     <script src="index.js"></script>
+    ...more stuff...
   </body>
 </html>
