--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -13,6 +13,22 @@
         <b id="b">Information</b>
       </li>
     </ul>
+
+    <table id="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Zelito</td>
+          <td>26</td>
+        </tr>
+      </tbody>
+    </table>
+
     <script>
       alert("From BODY: " + document.body);
     </script>
