--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -15,12 +15,12 @@
     </ul>
 
     <table id="table">
-      <!-- <thead> -->
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-      </tr>
-      <!-- </thead> -->
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+        </tr>
+      </thead>
       <tbody>
         <tr>
           <td>Zelito</td>
