--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -27,6 +27,12 @@
           <td>26</td>
         </tr>
       </tbody>
+      <tfoot>
+        <tr>
+          <td>Sum</td>
+          <td>$24</td>
+        </tr>
+      </tfoot>
     </table>
 
     <script>
