--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -15,6 +15,9 @@
     </ul>
 
     <table id="table">
+      <caption>
+        Monthly savings
+      </caption>
       <thead>
         <tr>
           <th>Name</th>
