--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/index.html
@@ -29,6 +29,10 @@
           <td>Zelito</td>
           <td>26</td>
         </tr>
+        <tr>
+          <td>Abdala</td>
+          <td>31</td>
+        </tr>
       </tbody>
       <tfoot>
         <tr>
