--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
@@ -8,3 +8,12 @@
     </ul>
   </body>
 </html>
+
+<!-- 
+  For each of the following, give at least one way of how 
+  to access them:
+  
+  1. The <div> DOM node?
+  2. The <ul> DOM node?
+  3. The second <li> (with Pete)?
+ -->
