--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
@@ -7,6 +7,12 @@
       <li>John</li>
       <li>Pete</li>
     </ul>
+
+    <script>
+      const div = document.body.firstElementChild;
+      const ul = div.nextElementSibling;
+      const li = ul.lastElementChild;
+    </script>
   </body>
 </html>
 
