--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
@@ -16,6 +16,10 @@
       const div2 = document.body.children[0];
       const ul2 = document.body.children[1];
       const li2 = document.body.children[1].children[1];
+
+      // or
+      const div3 = document.body.childNodes[1];
+      const ul3 = document.body.childNodes[3];
     </script>
   </body>
 </html>
