--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
@@ -20,6 +20,9 @@
       // or
       const div3 = document.body.childNodes[1];
       const ul3 = document.body.childNodes[3];
+      const li3 = document.body.childNodes[3].childNodes[3];
+
+      alert((div1 === div2) === div3);
     </script>
   </body>
 </html>
