--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
@@ -23,6 +23,7 @@
       const li3 = document.body.childNodes[3].childNodes[3];
 
       alert(div1 === div2 && div1 === div3);
+      alert(ul1 === ul2 && ul1 === ul3);
     </script>
   </body>
 </html>
