--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/dom-children.html
@@ -24,6 +24,7 @@
 
       alert(div1 === div2 && div1 === div3);
       alert(ul1 === ul2 && ul1 === ul3);
+      alert(li1 === li2 && li1 === li3);
     </script>
   </body>
 </html>
