--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/the-sibling-question.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/the-sibling-question.html
@@ -5,7 +5,7 @@
 
     <script>
       const elem = document.body.firstElementChild;
-      console.log(elem.lastChild);
+      console.log(elem.lastChild.nextSibling);
     </script>
   </body>
 </html>
