--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/the-sibling-question.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/the-sibling-question.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <div>Hello, world!</div>
+    <div>
+      <p>Hello, world!</p>
+    </div>
 
     <script>
       const elem = document.body.firstElementChild;
       console.log(elem.lastChild.nextSibling);
+      console.log(elem.children[0]);
     </script>
   </body>
 </html>
