--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/the-sibling-question.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/the-sibling-question.html
@@ -7,8 +7,8 @@
 
     <script>
       const elem = document.body.firstElementChild;
-      console.log(elem.lastChild.nextSibling);
-      console.log(elem.children[0]);
+      console.log(elem.lastChild.nextSibling === null);
+      console.log(elem.children[0].previousSibling === null);
     </script>
   </body>
 </html>
