--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
@@ -10,5 +10,18 @@
         padding: 3px 5px;
       }
     </style>
+    <body>
+      <table>
+        <tbody>
+          <tr>
+            <td>1:1</td>
+            <td>1:2</td>
+            <td>1:3</td>
+            <td>1:4</td>
+            <td>1:5</td>
+          </tr>
+        </tbody>
+      </table>
+    </body>
   </head>
 </html>
