--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
@@ -6,7 +6,7 @@
         border-collapse: collapse;
       }
       td {
-        border: 1 solid black;
+        border: 1px solid black;
         padding: 3px 5px;
       }
     </style>
