--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
@@ -50,6 +50,18 @@
           </tr>
         </tbody>
       </table>
+
+      <script>
+        const table = document.body.firstElementChild;
+        const rows = table.rows;
+        for (const row of table.rows) {
+          for (const cell of row.cells) {
+            if (row.rowIndex === cell.cellIndex) {
+              console.log(row.rowIndex, cell.cellIndex);
+            }
+          }
+        }
+      </script>
     </body>
   </head>
 </html>
