--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
@@ -53,11 +53,10 @@
 
       <script>
         const table = document.body.firstElementChild;
-        const rows = table.rows;
         for (const row of table.rows) {
           for (const cell of row.cells) {
             if (row.rowIndex === cell.cellIndex) {
-              console.log(row.rowIndex, cell.cellIndex);
+              cell.style.backgroundColor = "red";
             }
           }
         }
