--- a/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
+++ b/part-2-browser-document-events-interfaces/document/walking-the-dom/tasks/select-all-diagonal-cells.html
@@ -60,6 +60,11 @@
             }
           }
         }
+        // or
+        for (let i = 0; i < table.rows.length; i++) {
+          const row = table.rows[i];
+          row.cells[i].style.backgroundColor = "green";
+        }
       </script>
     </body>
   </head>
