--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div id="elem">
+      <div id="elem-content">Element</div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
