--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -4,6 +4,12 @@
     <div id="elem">
       <div id="elem-content">Element</div>
     </div>
+
+    <div id="elem">
+      <ul>
+        <li><b>Information</b></li>
+      </ul>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
