--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -19,6 +19,9 @@
       <li>has</li>
       <li>passed</li>
     </ul>
+
+    <a href="http://example.com/file.zip">...</a>
+    <a href="https://ya.ru/">...</a>
     <script src="index.js"></script>
   </body>
 </html>
