--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -23,6 +23,15 @@
     <a href="http://example.com/file.zip">...</a>
     <a href="https://ya.ru/">...</a>
 
+    <h1>Contents</h1>
+
+    <div class="contents">
+      <ul class="book">
+        <li class="chapter">Chapter 1</li>
+        <li class="chapter">Chapter 2</li>
+      </ul>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
