--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -32,6 +32,16 @@
       </ul>
     </div>
 
+    <div>
+      <label for="m">Masculino</label>
+      <input
+        id="m"
+        type="radio"
+        name="gender"
+        value="masculino"
+      />
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
