--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -40,6 +40,13 @@
         name="gender"
         value="masculino"
       />
+      <label for="f">Feminino</label>
+      <input
+        id="f"
+        type="radio"
+        name="gender"
+        value="feminino"
+      />
     </div>
 
     <script src="index.js"></script>
