--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -49,6 +49,22 @@
       />
     </div>
 
+    <table id="table">
+      <tr>
+        <td>Your age:</td>
+        <td>
+          <label>
+            <input
+              type="radio"
+              name="age"
+              value="young"
+              checked
+            />less than 18
+          </label>
+        </td>
+      </tr>
+    </table>
+
     <script src="index.js"></script>
   </body>
 </html>
