--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -61,6 +61,13 @@
               checked
             />less than 18
           </label>
+          <label>
+            <input
+              type="radio"
+              name="age"
+              value="mature"
+            />from 18 to 50
+          </label>
         </td>
       </tr>
     </table>
