--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -68,6 +68,13 @@
               value="mature"
             />from 18 to 50
           </label>
+          <label>
+            <input
+              type="radio"
+              name="age"
+              value="senior"
+            />more than 60
+          </label>
         </td>
       </tr>
     </table>
