--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -79,6 +79,11 @@
       </tr>
     </table>
 
+    <form name="my-form">
+      <div class="article">Article</div>
+      <div class="long article">Long article</div>
+    </form>
+
     <script src="index.js"></script>
   </body>
 </html>
