--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div>First div</div>
+
+    <script>
+      const divs = document.getElementsByTagName("div");
+      alert(divs.length);
+    </script>
+
+    <div>Second div</div>
+
+    <script>
+      alert(divs.length);
+    </script>
+
     <div id="elem">
       <div id="elem-content">Element</div>
     </div>
