--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -14,6 +14,19 @@
       alert(divs.length);
     </script>
 
+    <h1>First h1</h1>
+
+    <script>
+      const h1s = document.querySelectorAll("h1");
+      alert(h1s.length);
+    </script>
+
+    <h1>Second h1</h1>
+
+    <script>
+      alert(h1s.length);
+    </script>
+
     <div id="elem">
       <div id="elem-content">Element</div>
     </div>
