--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h2>First h2</h2>
+
+    <script>
+      const h2s = document.body.children;
+      alert(":::" + h2s.length);
+    </script>
     <div>First div</div>
 
     <script>
