--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -4,9 +4,16 @@
     <h2>First h2</h2>
 
     <script>
-      const h2s = document.body.children;
-      alert(":::" + h2s.length);
+      const h2Elements = document.body.children;
+      alert(":::" + h2Elements.length);
     </script>
+
+    <h2>Second h2</h2>
+
+    <script>
+      alert(":::" + h2Elements.length);
+    </script>
+
     <div>First div</div>
 
     <script>
