--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h3 id="heading">heading 3</h3>
+
+    <script>
+      const h3 = document.getElementById("heading");
+      alert(h3.textContent);
+    </script>
+
     <h2>First h2</h2>
 
     <script>
