--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -8,6 +8,10 @@
       alert(h3.textContent);
     </script>
 
+    <script>
+      h3.innerText = "Ops!...";
+    </script>
+
     <h2>First h2</h2>
 
     <script>
