--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h4>heading 4</h4>
+
+    <script>
+      const h4 = document.body.getElementsByName("h4");
+    </script>
+
     <h3 id="heading">heading 3</h3>
 
     <script>
