--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h4>heading 4</h4>
+    <h4 name="heading-4">heading 4</h4>
 
-    <script>
-      const h4 = document.body.getElementsByName("h4");
+    <script n>
+      const h4 = document.body.getElementsByName("heading-4");
     </script>
 
     <h3 id="heading">heading 3</h3>
