--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div id="elemA">
+      <div id="elemB"></div>
+    </div>
+
     <h4 name="heading-4">heading 4</h4>
 
     <script n>
