--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/index.html
@@ -5,6 +5,11 @@
       <div id="elemB"></div>
     </div>
 
+    <script>
+      alert(elemA.contains(elemB));
+      alert(elemA.contains(elemA));
+    </script>
+
     <h4 name="heading-4">heading 4</h4>
 
     <script n>
