--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <form></form>
+    <form name="search">
+      <label>
+        Search the site:
+        <input
+          type="text"
+          name="search"
+        />
+      </label>
+    </form>
     <hr />
     <form></form>
   </body>
