--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -9,6 +9,10 @@
           name="search"
         />
       </label>
+      <input
+        type="submit"
+        value="Search!"
+      />
     </form>
     <hr />
     <form></form>
