--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -15,6 +15,12 @@
       />
     </form>
     <hr />
-    <form></form>
+    <form name="search-person">
+      Search the visitors:
+      <input
+        type="submit"
+        value="Search!"
+      />
+    </form>
   </body>
 </html>
