--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -17,6 +17,12 @@
     <hr />
     <form name="search-person">
       Search the visitors:
+      <table id="id-table">
+        <tbody>
+          <tr></tr>
+          <tr></tr>
+        </tbody>
+      </table>
       <input
         type="submit"
         value="Search!"
