--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -19,7 +19,10 @@
       Search the visitors:
       <table id="id-table">
         <tbody>
-          <tr></tr>
+          <tr>
+            <td>Age:</td>
+            <td id="age-list"></td>
+          </tr>
           <tr></tr>
         </tbody>
       </table>
