--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -21,7 +21,16 @@
         <tbody>
           <tr>
             <td>Age:</td>
-            <td id="age-list"></td>
+            <td id="age-list">
+              <label>
+                <input
+                  type="radio"
+                  name="age"
+                  value="young"
+                />
+                less than 18
+              </label>
+            </td>
           </tr>
           <tr></tr>
         </tbody>
