--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -38,6 +38,14 @@
                 />
                 from 18 to 50
               </label>
+              <label>
+                <input
+                  type="radio"
+                  name="age"
+                  value="mature"
+                />
+                more than 50
+              </label>
             </td>
           </tr>
           <tr></tr>
