--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -48,7 +48,23 @@
               </label>
             </td>
           </tr>
-          <tr></tr>
+          <tr>
+            <td>Additionally:</td>
+            <td>
+              <input
+                type="text"
+                name="info[0]"
+              />
+              <input
+                type="text"
+                name="info[1]"
+              />
+              <input
+                type="text"
+                name="info[2]"
+              />
+            </td>
+          </tr>
         </tbody>
       </table>
       <input
