--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -17,7 +17,7 @@
     <hr />
     <form name="search-person">
       Search the visitors:
-      <table id="id-table">
+      <table id="age-table">
         <tbody>
           <tr>
             <td>Age:</td>
@@ -72,5 +72,9 @@
         value="Search!"
       />
     </form>
+
+    <script>
+      const table = document.getElementById("age-table");
+    </script>
   </body>
 </html>
