--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -75,6 +75,9 @@
 
     <script>
       const table = document.getElementById("age-table");
+      console.log(table);
+      const labels = table.getElementsByTagName("label");
+      console.log(labels);
     </script>
   </body>
 </html>
