--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -78,6 +78,8 @@
       console.log(table);
       const labels = table.getElementsByTagName("label");
       console.log(labels);
+      const firstTd = table.querySelector("td");
+      console.log(firstTd);
     </script>
   </body>
 </html>
