--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -79,7 +79,7 @@
       const labels = table.getElementsByTagName("label");
       console.log(labels);
       const firstTd = table.querySelector("td");
-      console.log(firstTd);
+      console.log(firstTd === table.querySelectorAll("td")[0]);
     </script>
   </body>
 </html>
