--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -80,6 +80,8 @@
       console.log(labels);
       const firstTd = table.querySelector("td");
       console.log(firstTd === table.querySelectorAll("td")[0]);
+      const form = document.querySelector("form[name='search']");
+      console.log(form);
     </script>
   </body>
 </html>
