--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -82,8 +82,8 @@
       console.log(firstTd === table.querySelectorAll("td")[0]);
       const form = document.querySelector("form[name='search']");
       console.log(form);
-      const input = form.querySelector("input");
-      console.log(input === form.querySelectorAll("input")[0]);
+      const firstInput = form.querySelector("input");
+      console.log(firstInput === form.querySelectorAll("input")[0]);
     </script>
   </body>
 </html>
