--- a/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/searching-get-element-query-selector/tasks/search-for-elements.html
@@ -84,6 +84,8 @@
       console.log(form);
       const firstInput = form.querySelector("input");
       console.log(firstInput === form.querySelectorAll("input")[0]);
+      const lastInput = form.querySelector("input[value='Search!']");
+      console.log(lastInput);
     </script>
   </body>
 </html>
