--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -2,6 +2,8 @@
 <html>
   <body>
     <!--comment-->
+    <p>A paragraph</p>
+    <div>A div</div>
     <script src="index.js"></script>
   </body>
 </html>
