--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -4,6 +4,12 @@
     <!--comment-->
     <p>A paragraph</p>
     <div>A div</div>
+
+    <script>
+      console.log(document.body.innerHTML);
+      document.body.innerHTML = "The new BODY!";
+      console.log(document.body.innerHTML);
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
