--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -10,6 +10,11 @@
       document.body.innerHTML = "The new BODY!";
       console.log(document.body.innerHTML);
     </script>
+
+    <script>
+      document.body.innerHTML = "<b>Test";
+      console.log(document.body.innerHTML);
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
