--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -15,6 +15,10 @@
       document.body.innerHTML = "<b>Test";
       console.log(document.body.innerHTML);
     </script>
+
+    <script>
+      document.body.innerHTML = '<script>console.log("Ola")';
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
