--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -18,6 +18,8 @@
 
     <script>
       document.body.innerHTML = '<script>console.log("Ola")';
+      document.body.innerHTML += "<div>Hello";
+      document.body.innerHTML += "How goes?";
     </script>
     <script src="index.js"></script>
   </body>
