--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -21,6 +21,12 @@
       document.body.innerHTML += "<div>Hello";
       document.body.innerHTML += "How goes?";
     </script>
+
+    <div id="elem">Hello <b>world</b></div>
+
+    <script>
+      console.log(document.getElementById("elem").outerHTML);
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
