--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -25,6 +25,10 @@
     <div id="elem">Hello <b>world</b></div>
 
     <script>
+      alert(typeof elem.outerHTML);
+    </script>
+
+    <script>
       console.log(
         document.getElementById("elem").outerHTML,
         typeof document.getElementById("elem").outerHTML
