--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/index.html
@@ -25,7 +25,7 @@
     <div id="elem">Hello <b>world</b></div>
 
     <script>
-      alert(typeof elem.outerHTML);
+      alert(typeof elem.outerHTML, elem.outerHTML);
     </script>
 
     <script>
