--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
@@ -8,6 +8,8 @@
 
       // replace div.outerHTML with <p>...</p>
       div.outerHTML = "<p>A <b>new</b> element</p>";
+
+      // Wow! 'div' is still the same!
       console.log(div.outerHTML);
     </script>
   </body>
