--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
@@ -11,6 +11,8 @@
 
       // Wow! 'div' is still the same!
       console.log(div.outerHTML);
+
+      console.log(document.querySelector("p").outerHTML);
     </script>
   </body>
 </html>
