--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
@@ -6,6 +6,11 @@
     <div>Hello, world!</div>
 
     <script>
+      let text = document.body.firstChild;
+      console.log(text.nodeValue, text.data);
+    </script>
+
+    <script>
       let div = document.querySelector("div");
 
       // replace div.outerHTML with <p>...</p>
